to_py_array: Properly handle enum array items

It used the fallback path and copied pointers.
Do the same thing we do for integer items instead.

https://bugzilla.gnome.org/show_bug.cgi?id=788890